--- a/css/product.css
+++ b/css/product.css
@@ -54,7 +54,7 @@ body {
 .smartBin {
     display: table;
     border-spacing: 2em;
-    /* width: 90vw; */
+    width: auto;
     padding: 2%;
     font-size: .9em;
     border: .1em solid rgba(0, 0, 0, .2);
@@ -75,7 +75,7 @@ body {
 .smartBin {
     display: table;
     border-spacing: 2em;
-    /* width: 80vw; */
+    width: auto;
     padding: 2%;
     font-size: 1.2em;
     border: .1em solid rgba(0, 0, 0, .2);
@@ -96,7 +96,7 @@ body {
 .smartBin {
     display: table;
     border-spacing: 2em;
-    /* width: 60vw; */
+    width: auto;
     padding: 2%;
     font-size: 1.5em;
     border: .1em solid rgba(0, 0, 0, .2);
