--- a/css/contact.css
+++ b/css/contact.css
@@ -12,6 +12,7 @@ body {
 .row {
     display: table;
     margin: 10%;
+    margin-left: 0;
     padding-top: 10%;
     border-spacing: 5em;
     margin: 0 auto;
