The final submit footer error

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,58 +1,1 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-html {
-    font-size: 62.5%}
-body {
-    box-sizing: inherit;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-.row {
-    display: table;
-    margin: 10%;
-    margin-left: 0;
-    padding-top: 10%;
-    border-spacing: 5em;
-    margin: 0 auto;
-}
-.column-contacts {
-    display: table-cell;
-    border: .1em solid rgba(0, 0, 0, .2);
-    text-align: center;
-    height: 25vh;
-    padding-top: 3%;
-    width: 10%}
-@media only screen and (max-width:480px) {
-    .column-contacts {
-    display: table;
-    border-spacing: 5em;
-    border: .1em solid rgba(0, 0, 0, .2);
-    text-align: center;
-    height: 25vh;
-    padding-top: 3%;
-    width: 25em;
-    margin-bottom: 2em;
-}
-}.span {
-    display: block;
-    padding: 2%}
-.contact-link{
-    text-decoration: none;
-    color: black;
-    font-size: 1.4em;
-}
-.col-heading {
-    text-transform: uppercase;
-    font-size: 2em;
-}
-.phone-color {
-    color: #4fce5d;
-}
-.mail-color {
-    color: #d44638;
-}
-.twitter-color {
-    color: #1da1f2;
-}
+*{margin:0;padding:0;box-sizing:border-box}html{font-size:62.5%}body{box-sizing:inherit;font-family:Verdana,Geneva,Tahoma,sans-serif}.row-contacts{display:table;margin:10%;margin-left:0;padding-top:10%;border-spacing:5em;margin:0 auto}.column-contacts{display:table-cell;border:.1em solid rgba(0,0,0,.2);text-align:center;height:25vh;padding-top:3%;width:10%;transition:all 1s ease-in-out}.column-contacts:hover{background-color:#7fff00;text-decoration:none}.contact-link:hover{text-decoration:none;color:#000}@media only screen and (max-width:480px){.column-contacts{display:table;border-spacing:5em;border:.1em solid rgba(0,0,0,.2);text-align:center;height:25vh;padding-top:3%;width:25em;margin-bottom:2em}}.span{display:block;padding:2%}.contact-link{text-decoration:none;color:#000;font-size:1.4em}.col-heading{text-transform:uppercase;font-size:2em}.phone-color{color:#4fce5d}.mail-color{color:#d44638}.twitter-color{color:#1da1f2}
